adjusted some unification and removed more RS crafting stuff.

--- a/overrides/config/jei/blacklist.cfg
+++ b/overrides/config/jei/blacklist.cfg
@@ -1,5 +1,6 @@
 ae2:facade
 chiselsandbits:block_bit
+refinedstorage:crafter
 refinedstorage:white_crafter
 refinedstorage:orange_crafter
 refinedstorage:magenta_crafter
@@ -15,6 +16,7 @@ refinedstorage:brown_crafter
 refinedstorage:green_crafter
 refinedstorage:red_crafter
 refinedstorage:black_crafter
+refinedstorage:crafter_manager
 refinedstorage:white_crafter_manager
 refinedstorage:orange_crafter_manager
 refinedstorage:magenta_crafter_manager
@@ -30,5 +32,37 @@ refinedstorage:brown_crafter_manager
 refinedstorage:green_crafter_manager
 refinedstorage:red_crafter_manager
 refinedstorage:black_crafter_manager
-refinedstorage:crafter
-refinedstorage:crafter_manager
+refinedstorage:pattern
+refinedstorage:pattern_grid
+refinedstorage:white_pattern_grid
+refinedstorage:orange_pattern_grid
+refinedstorage:magenta_pattern_grid
+refinedstorage:yellow_pattern_grid
+refinedstorage:lime_pattern_grid
+refinedstorage:pink_pattern_grid
+refinedstorage:gray_pattern_grid
+refinedstorage:light_gray_pattern_grid
+refinedstorage:cyan_pattern_grid
+refinedstorage:purple_pattern_grid
+refinedstorage:blue_pattern_grid
+refinedstorage:brown_pattern_grid
+refinedstorage:green_pattern_grid
+refinedstorage:red_pattern_grid
+refinedstorage:black_pattern_grid
+refinedstorage:crafting_monitor
+refinedstorage:wireless_crafting_monitor
+refinedstorage:white_crafting_monitor
+refinedstorage:orange_crafting_monitor
+refinedstorage:magenta_crafting_monitor
+refinedstorage:yellow_crafting_monitor
+refinedstorage:lime_crafting_monitor
+refinedstorage:pink_crafting_monitor
+refinedstorage:gray_crafting_monitor
+refinedstorage:light_gray_crafting_monitor
+refinedstorage:cyan_crafting_monitor
+refinedstorage:purple_crafting_monitor
+refinedstorage:blue_crafting_monitor
+refinedstorage:brown_crafting_monitor
+refinedstorage:green_crafting_monitor
+refinedstorage:red_crafting_monitor
+refinedstorage:black_crafting_monitor
