--- a/overrides/config/waystones-common.toml
+++ b/overrides/config/waystones-common.toml
@@ -108,7 +108,7 @@
 	#Range: > -2147483648
 	frequency = 25
 	#List of dimensions that waystones are allowed to spawn in through world gen. If left empty, all dimensions except those in worldGenDimensionDenyList are used.
-	dimensionAllowList = ["minecraft:overworld", "minecraft:the_nether", "minecraft:the_end"]
+	dimensionAllowList = []
 	#List of dimensions that waystones are not allowed to spawn in through world gen. Only used if worldGenDimensionAllowList is empty.
 	dimensionDenyList = []
 	#Set to 'PRESET_FIRST' to first use names from the custom names list. Set to 'PRESET_ONLY' to use only those custom names. Set to 'MIXED' to have some waystones use custom names, and others random names.
@@ -119,7 +119,7 @@
 	#Set to true if waystones should be added to the generation of villages. Some villages may still spawn without a waystone.
 	spawnInVillages = true
 	#Ensures that pretty much every village will have a waystone, by spawning it as early as possible. In addition, this means waystones will generally be located in the center of the village.
-	forceSpawnInVillages = false
+	forceSpawnInVillages = true
 
 [client]
 	#If enabled, the text overlay on waystones will no longer always render at full brightness.
