--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,15 @@
     "version": "1.18.2",
     "modLoaders": [
       {
-        "id": "forge-40.1.54",
+        "id": "forge-40.1.67",
         "primary": true
       }
     ]
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "Exigence 2.0.10",
-  "author": "",
+  "name": "Exigence 2.0.11",
+  "author": "ZpprSprk",
   "files": [
     {
       "projectID": 260262,
@@ -95,7 +95,7 @@
     },
     {
       "projectID": 280441,
-      "fileID": 3741889,
+      "fileID": 3878822,
       "required": true
     },
     {
@@ -220,17 +220,17 @@
     },
     {
       "projectID": 244786,
-      "fileID": 3765390,
+      "fileID": 3888547,
       "required": true
     },
     {
       "projectID": 238086,
-      "fileID": 3856924,
+      "fileID": 3888614,
       "required": true
     },
     {
       "projectID": 400058,
-      "fileID": 3876964,
+      "fileID": 3892391,
       "required": true
     },
     {
@@ -270,12 +270,12 @@
     },
     {
       "projectID": 243707,
-      "fileID": 3836530,
+      "fileID": 3878219,
       "required": true
     },
     {
       "projectID": 626839,
-      "fileID": 3849307,
+      "fileID": 3888193,
       "required": true
     },
     {
@@ -310,7 +310,7 @@
     },
     {
       "projectID": 361026,
-      "fileID": 3876559,
+      "fileID": 3892203,
       "required": true
     },
     {
@@ -330,7 +330,7 @@
     },
     {
       "projectID": 239286,
-      "fileID": 3851582,
+      "fileID": 3888481,
       "required": true
     },
     {
@@ -375,7 +375,7 @@
     },
     {
       "projectID": 238222,
-      "fileID": 3847103,
+      "fileID": 3885885,
       "required": true
     },
     {
@@ -385,12 +385,12 @@
     },
     {
       "projectID": 268387,
-      "fileID": 3686425,
+      "fileID": 3885707,
       "required": true
     },
     {
       "projectID": 376737,
-      "fileID": 3854605,
+      "fileID": 3877945,
       "required": true
     },
     {
@@ -435,7 +435,7 @@
     },
     {
       "projectID": 363363,
-      "fileID": 3813983,
+      "fileID": 3894601,
       "required": true
     },
     {
@@ -550,7 +550,7 @@
     },
     {
       "projectID": 441647,
-      "fileID": 3850130,
+      "fileID": 3881485,
       "required": true
     },
     {
@@ -570,7 +570,7 @@
     },
     {
       "projectID": 257356,
-      "fileID": 3846587,
+      "fileID": 3884251,
       "required": true
     },
     {
@@ -635,7 +635,7 @@
     },
     {
       "projectID": 361276,
-      "fileID": 3874595,
+      "fileID": 3891801,
       "required": true
     },
     {
@@ -650,7 +650,7 @@
     },
     {
       "projectID": 318833,
-      "fileID": 3843313,
+      "fileID": 3881262,
       "required": true
     },
     {
@@ -700,7 +700,7 @@
     },
     {
       "projectID": 321117,
-      "fileID": 3870826,
+      "fileID": 3892168,
       "required": true
     },
     {
@@ -755,7 +755,7 @@
     },
     {
       "projectID": 388172,
-      "fileID": 3856641,
+      "fileID": 3885204,
       "required": true
     },
     {
@@ -810,7 +810,7 @@
     },
     {
       "projectID": 236307,
-      "fileID": 3851758,
+      "fileID": 3884989,
       "required": true
     },
     {
@@ -830,7 +830,7 @@
     },
     {
       "projectID": 400514,
-      "fileID": 3795708,
+      "fileID": 3887794,
       "required": true
     },
     {
@@ -860,7 +860,7 @@
     },
     {
       "projectID": 228525,
-      "fileID": 3876467,
+      "fileID": 3891368,
       "required": true
     },
     {
@@ -1025,7 +1025,7 @@
     },
     {
       "projectID": 416294,
-      "fileID": 3846164,
+      "fileID": 3892335,
       "required": true
     },
     {
@@ -1035,7 +1035,7 @@
     },
     {
       "projectID": 552574,
-      "fileID": 3784482,
+      "fileID": 3877903,
       "required": true
     },
     {
@@ -1045,12 +1045,12 @@
     },
     {
       "projectID": 284497,
-      "fileID": 3802278,
+      "fileID": 3894246,
       "required": true
     },
     {
       "projectID": 342584,
-      "fileID": 3822132,
+      "fileID": 3879491,
       "required": true
     },
     {
@@ -1070,7 +1070,7 @@
     },
     {
       "projectID": 240950,
-      "fileID": 3828445,
+      "fileID": 3885828,
       "required": true
     },
     {
@@ -1085,7 +1085,7 @@
     },
     {
       "projectID": 402924,
-      "fileID": 3876994,
+      "fileID": 3881417,
       "required": true
     },
     {
@@ -1130,7 +1130,7 @@
     },
     {
       "projectID": 419699,
-      "fileID": 3855244,
+      "fileID": 3893735,
       "required": true
     },
     {
@@ -1230,7 +1230,7 @@
     },
     {
       "projectID": 246640,
-      "fileID": 3686412,
+      "fileID": 3878782,
       "required": true
     },
     {
@@ -1270,17 +1270,17 @@
     },
     {
       "projectID": 256717,
-      "fileID": 3833879,
+      "fileID": 3886101,
       "required": true
     },
     {
       "projectID": 269024,
-      "fileID": 3866716,
+      "fileID": 3885075,
       "required": true
     },
     {
       "projectID": 401955,
-      "fileID": 3871318,
+      "fileID": 3888205,
       "required": true
     },
     {
@@ -1410,7 +1410,7 @@
     },
     {
       "projectID": 283644,
-      "fileID": 3845997,
+      "fileID": 3877902,
       "required": true
     },
     {
@@ -1485,7 +1485,7 @@
     },
     {
       "projectID": 373051,
-      "fileID": 3867119,
+      "fileID": 3878287,
       "required": true
     },
     {
