--- a/overrides/config/ironfurnaces-client.toml
+++ b/overrides/config/ironfurnaces-client.toml
@@ -218,7 +218,7 @@
 		# How much power the Rainbow Furnace will generate.
 		# Default: 10000
 		#Range: 1 ~ 100000000
-		power_to_generate = 10000
+		power_to_generate = 1000000
 		# How many furnaces that need to be linked in order for the Rainbow Furnace to generate power.
 		# Default: 9
 		#Range: 1 ~ 100
