Update to version 2.1.3

--- a/overrides/config/jei/blacklist.cfg
+++ b/overrides/config/jei/blacklist.cfg
@@ -1,5 +1,6 @@
 ae2:facade
 chiselsandbits:block_bit
+cyclic:uncrafter
 refinedstorage:crafter
 refinedstorage:white_crafter
 refinedstorage:orange_crafter
