update manifest.json a bit...

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "exigence 3",
-  "version": "3.0.0.0",
-  "author": "",
+  "version": "3.0.0",
+  "author": "ZpprSprk",
   "files": [
     {
       "projectID": 827163,
