--- a/overrides/config/pneumaticcraft-common.toml
+++ b/overrides/config/pneumaticcraft-common.toml
@@ -96,6 +96,9 @@
 	disenchanting_blacklist = ["quark:ancient_tome", "tetra:"]
 	#ID's of dimensions in which the Aerial Interface is not allowed to operate. You can use wildcarded dimensions here, e.g. 'somemod:*'.
 	aerial_interface_dimension_blacklist = []
+	#Minimum interval in ticks which the player can use the Vortex Cannon to boost their own speed
+	#Range: > 1
+	vortex_cannon_player_boost_rate = 10
 
 ["Pneumatic Armor"]
 	#Jetboots air usage in mL/tick (per Jet Boots Upgrade)
