--- a/overrides/kubejs/config/common.properties
+++ b/overrides/kubejs/config/common.properties
@@ -1,5 +1,5 @@
 #KubeJS Common Properties
-#Sun Sep 03 22:01:44 CDT 2023
+#Thu Sep 21 20:42:34 CDT 2023
 matchJsonRecipes=true
 allowAsyncStreams=true
 announceReload=true
@@ -9,4 +9,5 @@ hideServerScriptErrors=false
 saveDevPropertiesInConfig=false
 packmode=default
 ignoreCustomUniqueRecipeIds=false
+creativeModeTabIcon=minecraft\:purple_dye
 startupErrorReportUrl=
