Adds Exigence 3.0.1.zip and minor tweak to manifest.json file

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "exigence 3",
+  "name": "Exigence 3",
   "version": "3.0.1",
   "author": "ZpprSprk",
   "files": [
