--- a/overrides/config/Qubik Studios Mods/SneakyTreeGrowing/blockList.toml
+++ b/overrides/config/Qubik Studios Mods/SneakyTreeGrowing/blockList.toml
@@ -3,5 +3,5 @@
 	#Here you can add every block you like to get a Bone Meal effect applied.
 	Block-List = ["minecraft:bamboo", "minecraft:brown_mushroom", "minecraft:red_mushroom", "minecraft:wheat_seeds", "minecraft:carrots", "minecraft:potatoes", "minecraft:beetroots", "minecraft:melon_stem", "minecraft:pumpkin_stem", "minecraft:big_dripleaf", "minecraft:small_dripleaf"]
 	#Here you can add block Tags for easier use of this mod.
-	Tag-List = ["minecraft:crops", "minecraft:saplings", "forge:pams_crops", "forge:pams_fruits"]
+	Tag-List = ["minecraft:crops", "minecraft:saplings", "forge:pams_crops", "forge:pams_fruits", "botania:buried_petals"]
 
